# picofan

./: .gitignore  README.md  checksum.py  companion.py  convert.py  pico.py  protocol.md  requires.yml
companion/: README.md  pyproject.toml
companion/src/picofan_companion/: companion.py
docs/: protocol.md
docs/examples/: protocol.hex  protocol.hexproj  protocol.pat
hardware/picofan/: fp-info-cache  fp-lib-table  picofan.kicad_pcb  picofan.kicad_prl  picofan.kicad_pro  picofan.kicad_sch  sym-lib-table  ~picofan.kicad_sch.lck
picofan/: .micropythonrc  README.md  main.py  pyproject.toml  sensors.py
picofan/src/picofan/: boot.py  com.py  localctrl.py  main.py  things.py
